# is_superuser

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/checker/: unix.rs  windows.rs
