[package]
name = "is_superuser"
description = "A cross-platform solution for finding out if the running user is a superuser."
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/irishgreencitrus/is_superuser"
readme = "README.md"

[lib]
crate-type = ["rlib","dylib"]

[dependencies]
libc = "0.2"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["securitybaseapi", "processthreadsapi"]}
